Started to implement the CWE table attribute value extraction from DFD
